--- a/AppScheduler/app.config
+++ b/AppScheduler/app.config
@@ -8,7 +8,22 @@
     <userSettings>
         <AppScheduler.Properties.Settings>
             <setting name="executablePath" serializeAs="String">
-                <value>SomeAppPath</value>
+                <value />
+            </setting>
+            <setting name="dataLimit" serializeAs="String">
+                <value>100</value>
+            </setting>
+            <setting name="timerInterval" serializeAs="String">
+                <value>5000</value>
+            </setting>
+            <setting name="startTime" serializeAs="String">
+                <value>2000-01-01</value>
+            </setting>
+            <setting name="endTime" serializeAs="String">
+                <value>3000-01-01</value>
+            </setting>
+            <setting name="firstTime" serializeAs="String">
+                <value>True</value>
             </setting>
         </AppScheduler.Properties.Settings>
     </userSettings>
