initial working version

--- a/AppScheduler/AppScheduler.csproj
+++ b/AppScheduler/AppScheduler.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{9D39B6EC-8973-4C38-B466-C1BDA75193A0}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>AppScheduler</RootNamespace>
     <AssemblyName>AppScheduler</AssemblyName>
